kubernetes/apps/observability/tempo/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tempo-query
  annotations:
    external-dns.alpha.kubernetes.io/hostname: tempo.davidhome.ro
    gatus.home-operations.com/endpoint: |-
      name: Tempo
      group: Monitoring
      url: https://tempo.davidhome.ro/ready
      interval: 1m
      conditions: ["[STATUS] == 200"]
spec:
  ingressClassName: internal
  rules:
    - host: &host tempo.davidhome.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tempo
                port:
                  number: 3200
  tls:
    - hosts: [*host]
